# Searching_Algorithms

./: AAstar.cpp  AAstar.h  Astar.cpp  Astar.h  BestFS.cpp  BestFS.h  Bfs.cpp  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Compare.h  Dfs.cpp  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  Isearchable.h  Isearcher.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  README  SearchSolver.h  Searchable.h  Searcher.cpp  Searcher.h  SerachSolver.cpp  SerachSolver.h  Solver.cpp  Solver.h  StringReverser.cpp  (+15 more)
